<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE resources [
    <!ENTITY appname "Viz Dashcam">]>

<resources>

    <string name="app_name">Viz Dashcam</string>

    <string name="app_name_full">Viz Dashcam - The Dashboard Witness</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>

    <string name="delete">Delete</string>

    <string-array name="spinner_sort_array">
        <item>Date - Desc.</item>
        <item>Date - Asc.</item>
        <item>Size - Asc.</item>
        <item>Size - Desc.</item>
        <item>Length - Asc.</item>
        <item>Length - Desc.</item>
    </string-array>

    <string-array name="video_length_entry">
        <item>10 seconds</item>
        <item>1 minute</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
    </string-array>

    <string-array name="video_length_value">
        <item>10000</item>
        <item>60000</item>
        <item>300000</item>
        <item>600000</item>
    </string-array>

    <string-array name="speedometer_units_entry">
        <item>Miles / hour</item>
        <item>KM / hour</item>
    </string-array>

    <string-array name="speedometer_units_value">
        <item>mph</item>
        <item>kph</item>
    </string-array>

    <string-array name="shock_sensitivity_entry">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>

    <string-array name="shock_sensitivity_value">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>


    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="share_file">Share File</string>

    <string name="play">Play</string>

    <string name="shock_detected">Shock detected!</string>

    <string name="video_length">Video Length</string>

    <string name="video_size">Video size</string>

    <string name="video">Video</string>

    <string name="set_video_quality">Set video quality</string>

    <string name="video_quality">Video Quality</string>

    <string name="set_video_length">Set video length</string>

    <string name="loop_mode">Loop Mode</string>

    <string name="delete_old_videos_when_the_phone_runs_out_of_storage">Delete old videos when the phone runs out of storage</string>

    <string name="shock_detection">Shock Detection</string>

    <string name="shock_detection_sensitivity">Shock Detection Sensitivity</string>

    <string name="mark_videos_by_long_pressing_on_the_screen">Mark videos by long-pressing on the screen</string>

    <string name="long_press_to_mark">Long-Press to Mark</string>

    <string name="feedback">Feedback</string>

    <string name="audio_feedback_for_shocks">Audio Feedback for Shocks</string>

    <string name="play_a_sound_when_a_shock_occurs">Play a sound when a shock occurs</string>

    <string name="audio_feedback_for_buttons">Audio Feedback for Buttons</string>

    <string name="play_a_sound_when_pressing_buttons">Play a sound when pressing buttons</string>

    <string name="tactile_feedback_for_buttons">Tactile Feedback for Buttons</string>

    <string name="vibrate_when_pressing_buttons">Vibrate when pressing buttons</string>

    <string name="speedometer">Speedometer</string>

    <string name="recording_audio">Recording Audio</string>

    <string name="display_vehicle_speed_note_the_speed_doesn_t_appear_in_the_video">Display vehicle speed. Note: the speed doesn\'t appear in the video.</string>

    <string name="units_of_measurement">Units of Measurement</string>

    <string name="play_video">Play Video</string>

    <string name="overlay_permission_not_granted">Overlay permission not granted</string>

    <string name="camera_permission_not_granted">Camera permission not granted</string>

    <string name="write_permission_not_granted">Write permission not granted</string>

    <string name="basic_permissions_not_granted">Write and Camera permissions not granted</string>

    <string name="retry">Retry</string>

    <string name="grant_permission">Grant permission</string>

    <string name="cancel">Cancel</string>

    <string name="got_it">Got it</string>

    <string name="videos">Videos</string>

    <string name="share_video">Share</string>


    <string name="prefs_set_video_quality">Set video quality</string>

    <string name="prefs_set_video_quality_stop">Set video quality. Please stop recording before changing this</string>

    <string name="prefs_set_video_length_stop">Set video length. Please stop recording before changing this</string>

    <string name="prefs_set_video_length">Set video length</string>

    <string name="prefs_delete_old_videos_stop">Delete old videos when the phone runs out of storage. Please stop recording before changing this</string>

    <string name="prefs_delete_old_videos">Delete old videos when the phone runs out of storage</string>

    <string name="pref_mark_stop">Mark videos during which a shock occured. This prevents LOOP MODE from deleting these videos. Please stop recording before changing this</string>

    <string name="pref_mark">Mark videos during which a shock occured. This prevents LOOP MODE from deleting these videos</string>

    <string name="prefs_shock_sensitivity_stop">Set shock detection sensitivity. Please stop recording before changing this</string>

    <string name="prefs_shock_sensitivity">Set shock detection sensitivity</string>

    <string name="prefs_sound_recording_activated">Sound recording has been activated. Deactivate by removing
        the permission from Settings > Apps > viz > Permissions > Microphone</string>

    <string name="prefs_sound_recording_not_activated">Sound recording has not been activated. Tap to grant
        permission</string>

    <string name="permission_explanation_audio">For audio recording to work, the \"Microphone\" permission must be
        granted</string>

    <string name="permission_explanation_location">For the speedometer feature to work, the \"Location\" permission
        must be granted</string>

    <string name="permission_explanation_basic_dont_show">The application uses the <b>Camera</b> and <b>Storage</b>
        permissions to capture and save video. Please grant these permissions</string>

    <string name="permission_warning_audio">You have not granted the \"Microphone\" permission. Because of this,
        the recordings won\'t contain audio.
        <b>You can grant the permission from the app\'s Settings screen</b></string>

    <string name="file_marked">File marked!</string>

    <string name="file_unmarked">File unmarked!</string>

    <plurals name="minutes">
        <item quantity="zero">%d minutes</item>
        <item quantity="one">%d minute</item>
        <item quantity="many">%d minutes</item>
        <item quantity="other">%d minutes</item>
    </plurals>

    <plurals name="seconds">
        <item quantity="zero">%d seconds</item>
        <item quantity="one">%d second</item>
        <item quantity="many">%d seconds</item>
    </plurals>

    <string name="megabyte">%d MB</string>

    <string name="notification_description">&appname; is running</string>

    <string name="dismiss">Dismiss</string>

    <string name="storage_dialog_description">Insufficient memory - recording stopped. Free up some space
        first!</string>

    <string name="welcome_to_appname">Welcome to <b>&appname;</b></string>

    <string name="next">Next</string>

    <string name="Finish">Finish</string>

    <string name="permission_explanation_audio_new"><big><b>Audio Recording</b></big>\n\nCan\'t record that
        sporty engine revving without the audio permission :(</string>

    <string name="permission_explanation_location_new"><big><b>Location</b></big>\n\nFor the speedometer to work, the \"Location\" permission must be granted</string>

    <string name="permission_explanation_camera_new"><big><b>Camera</b></big>\n\nCapturing that crisp traffic
        footage requires … a <b>camera</b>!</string>

    <string name="permission_explanation_storage_new"><big><b>Storage</b></big>\n\nWe have to save the
        recordings somewhere, don\'t we?</string>

    <string name="permission_explanation_overlay_new"><big><b>Overlay</b></big>\n\n<b>viz</b> is designed to
        work in the background as well, and this wouldn\'t be possible without the <b>overlay</b> permission</string>

    <string name="permission_granted">Permission granted &#10004;</string>

    <string name="done">Done</string>
    <string name="all_videos">All Videos</string>
    <string name="marked_videos">Marked Videos</string>

</resources>