<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <ImageView
                    android:id="@+id/iv_preview"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/iv_play"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/bg_effect_onpress_semi_full_white"
                    android:contentDescription="@string/play_video"
                    android:scaleType="centerInside"
                    android:src="@drawable/btn_play" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:baselineAligned="true"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/video_length"
                        android:scaleType="centerInside"
                        android:src="@drawable/icon_length" />

                    <TextView
                        android:id="@+id/tv_length"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:paddingLeft="10dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/video_size"
                        android:scaleType="centerInside"
                        android:src="@drawable/icon_size" />

                    <TextView
                        android:id="@+id/tv_size"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:paddingLeft="10dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_shock"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="match_parent"
                        android:scaleType="centerInside"
                        android:src="@drawable/icon_shock"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/tv_shock"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:paddingLeft="10dp"
                        android:text="@string/shock_detected" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.6"
                android:gravity="center"
                android:padding="10dp"
                android:text="Quick tip: you can manually mark a video by tapping on &quot;Shock detected!&quot; above."
                android:textColor="@color/C2Black"
                android:textSize="15sp" />
        </LinearLayout>

    </ScrollView>
</LinearLayout>


